--- a/src/main/resources/templates/supervision/drug_information_maintenance.html
+++ b/src/main/resources/templates/supervision/drug_information_maintenance.html
@@ -273,22 +273,59 @@
                     </tr>
                     <tr>
                         <td>是否进口药</td>
-                        <td><input class="form-control"></td>
+                        <td style="word-break: keep-all;white-space: nowrap">
+                            <input type="radio" value="0" style="width: 15px;height: 15px" name="importedDrug"><span>是</span>
+                            <input type="radio" value="1" style="width: 15px;height: 15px" name="importedDrug"><span>否</span>
+                        </td>
                         <td>批准文号有效期</td>
                         <td><input class="form-control"></td>
                     </tr>
                     <tr>
-                        <td>药品类别:</td>
+                        <td>包装材质</td>
+                        <td><input class="form-control"></td>
+                        <td>包装单位</td>
+                        <td><input class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>最新零售价</td>
+                        <td><input class="form-control"></td>
+                        <td>零售价出处</td>
+                        <td><input class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>质量层次</td>
                         <td>
                             <select style="width:50%;height: 10%">
                                 <option value="0">请选择</option>
                             </select>
                         </td>
-                        <td>状态:</td>
+                        <td>质量层次说明</td>
+                        <td>
+                            <input class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>有无药检报告</td>
+                        <td style="word-break: keep-all;white-space: nowrap">
+                            <input type="radio" value="1" style="width: 15px;height: 15px" name="importedDrug"><span>有</span>
+                            <input type="radio" value="0" style="width: 15px;height: 15px" name="importedDrug"><span>无</span>
+                        </td>
+                        <td>药检报告编号</td>
+                        <td><input class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>药品检验报告有效期:</td>
+                        <td><input class="form-control"></td>
+                        <td>药品交易状态:</td>
                         <td><select style="width:50%;height: 10%">
                             <option value="0">请选择</option>
                         </select>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>产品说明：</td>
+                        <!--<td><input type="text" style="border: none;overflow: hidden;height: 200%;width: 225%"></td>-->
+                        <td colspan="3"><textarea style="height: 100%;width: 100%"></textarea></td>
                     </tr>
                 </table>
             </div>
