--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- 页面meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>监督管理系统</title>
 </head>
-<body>
 
+<body class="hold-transition skin-blue sidebar-mini"
+      ng-init="getUserName();getRoleName()">
+
+<h1><a href="/userControl">用户管理页面</a></h1>
+<h1><a href="/supervisory_management_index">监督管理系统</a></h1>
+<h1><a href="/purchasing_management_index">药品采购系统</a></h1>
+<h1><a href="/userControl">供货管理系统</a></h1>
 </body>
+
 </html>
+
+
