--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.thymeleaf.org/thymeleaf-extras-shiro">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <title>Title</title>
 </head>
 <body>
-<h1>系统跳转页面</h1>
-<h1><a href="/userControl">用户管理页面</a></h1>
-<h1><a href="/supervisory_management_index">监督管理系统</a></h1>
-<h1><a href="/userControl">药品采购系统</a></h1>
-<h1><a href="/userControl">供货管理系统</a></h1>
-
+<a href="/supervisionIndex">监督管理</a>
+<a href="#">采购管理</a>
+<a href="#">系统管理</a>
+<a href="#">供货管理</a>
 </body>
 </html>
