--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <!-- 页面meta -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>监督管理系统</title>
+    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
+    <title>Title</title>
 </head>
-
-<body class="hold-transition skin-blue sidebar-mini"
-      ng-init="getUserName();getRoleName()">
-
-<h1><a href="/userControl">用户管理页面</a></h1>
-<h1><a href="/supervisory_management_index">监督管理系统</a></h1>
-<h1><a href="/purchasing_management_index">药品采购系统</a></h1>
-<h1><a href="/userControl">供货管理系统</a></h1>
+<body>
+<a href="/supervisionIndex">监督管理</a>
+<a href="#">采购管理</a>
+<a href="#">系统管理</a>
+<a href="#">供货管理</a>
 </body>
-
 </html>
-
-
