--- a/src/main/resources/templates/supervision/supervision_index.html
+++ b/src/main/resources/templates/supervision/supervision_index.html
@@ -121,13 +121,11 @@
                     <a href="#">
                         <i class="fa fa-folder"></i>
                         <span>采购管理</span>
-                        <span class="pull-right-container">
-				       			<i class="fa fa-angle-left pull-right"></i>
-				   		 	</span>
+
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="#" target="iframe">
+                            <a href="purchase_order_approval" target="iframe">
                                 <i class="fa fa-circle-o"></i> 采购单审核
                             </a>
                         </li>
@@ -143,7 +141,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="audit_ncm_form.jsp" target="iframe">
+                            <a href="supplier_audit" target="iframe">
                                 <i class="fa fa-circle-o"></i> 供货审核
                             </a>
                         </li>
@@ -159,35 +157,35 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="case_management.jsp" target="iframe">
+                            <a href="purchase_order_enquiry" target="iframe">
                                 <i class="fa fa-circle-o"></i> 按采购单查询
                             </a>
                         </li>
                     </ul>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="case_management.jsp" target="iframe">
+                            <a href="supplier_enquiry" target="iframe">
                                 <i class="fa fa-circle-o"></i> 按供货商查询
                             </a>
                         </li>
                     </ul>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="case_management.jsp" target="iframe">
+                            <a href="hospital_equery" target="iframe">
                                 <i class="fa fa-circle-o"></i> 采购医院查询
                             </a>
                         </li>
                     </ul>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="case_management.jsp" target="iframe">
+                            <a href="drug_trading_enquiry" target="iframe">
                                 <i class="fa fa-circle-o"></i> 按交易药品查询
                             </a>
                         </li>
                     </ul>
                     <ul class="treeview-menu">
                         <li>
-                            <a href="case_management.jsp" target="iframe">
+                            <a href="drug_transaction_details_equery" target="iframe">
                                 <i class="fa fa-circle-o"></i> 查询药品交易明细
                             </a>
                         </li>
