--- a/src/main/resources/templates/supervision/supplier_audit.html
+++ b/src/main/resources/templates/supervision/supplier_audit.html
@@ -5,7 +5,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="IE=edge">
-    <title>药品信息维护</title>
+    <title>供货审核</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../js/plugins/bootstrap/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
 <toaster-container toaster-options="{'time-out': 1000,'position-class':'toast-top-center'}"></toaster-container>
 <div class="panel panel-info">
     <!-- Default panel contents -->
-    <div class="panel-heading">药品信息查询</div>
+    <div class="panel-heading">供货商药品审核</div>
     <!-- Table -->
     <table class="table">
         <tr>
@@ -80,7 +80,7 @@
         </tr>
         <tr>
             <td style="text-align: right">
-                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">生产企业：</span>
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">生产企业：</span>
             </td>
             <td>
                 <input class="form-control">
@@ -128,10 +128,29 @@
                 <!-- <input class="form-control" id="" >-->
             </td>
         </tr>
+        <tr>
+            <td style="text-align: right">
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">供货商：</span>
+            </td>
+            <td>
+                <select style="width: 50%;height: 20%">
+                    <option value="0">请选择</option>
+                </select>
+                <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
+            </td>
+            <td style="text-align: right">
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">审核状态：</span>
+            </td>
+            <td>
+                <select style="width: 50%;height: 20%">
+                    <option value="0">请选择</option>
+                </select>
+                <!-- <input class="form-control" id="" >-->
+            </td>
+        </tr>
     </table>
     <div style="text-align: center;padding-top: 10px">
         <button class="btn btn-success btn-sm" onclick="selectByEntity()">查询</button>
-        <button class="btn btn-success btn-sm" onclick="selectByEntity()">导出</button>
     </div>
 </div>
 <div class="box-body">
@@ -143,12 +162,7 @@
             <div class="pull-left">
                 <div class="form-group form-inline">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success btn-sm" data-toggle="modal"
-                                data-target="#editModal1">添加
-                        </button>
-                        <button type="button" class="btn btn-success btn-sm" data-toggle="modal"
-                                data-target="#editModal">导入
-                        </button>
+                        <button type="button" class="btn btn-success btn-sm" >提交审核结果</button>
                     </div>
                 </div>
             </div>
@@ -158,8 +172,12 @@
         <table id="dataList" class="table table-bordered table-striped table-hover dataTable">
             <thead>
             <tr>
-                <th class="sorting_asc">药品流水号</th>
-                <th class="sorting_asc">通用名</th>
+                <th>序号</th>
+                <th>选择</th>
+                <th class="sorting_asc">审核结果</th>
+                <th class="sorting">供货商</th>
+                <th class="sorting">药品流水号</th>
+                <th class="sorting">通用名</th>
                 <th class="sorting">剂型</th>
                 <th class="sorting">规格</th>
                 <th class="sorting">单位</th>
@@ -171,18 +189,20 @@
                 <th class="sorting">药品类别</th>
                 <th class="sorting">交易状态</th>
                 <th class="sorting">详细</th>
-                <th class="sorting">修改</th>
-                <th class="sorting">删除</th>
             </tr>
             </thead>
             <tbody class="context">
             <tr>
+                <td>1</td>
+                <td><input type="checkbox"></td>
+                <td><input type="text" style="width: 100%"></td>
+                <td>供货商1</td>
                 <td>00008</td>
                 <td>0.9%氯化钠</td>
                 <td>大输液</td>
-                <td>1000ml（玻瓶）</td>
+                <td>1000ml</td>
                 <td>瓶</td>
-                <td>1</td>
+                <td>3</td>
                 <td>哈药六厂</td>
                 <td>0.9%氯化钠</td>
                 <td>3.0</td>
@@ -191,12 +211,6 @@
                 <td>正常</td>
                 <td>
                     <a href="#" data-toggle="modal" data-target="#editModal2">查看</a>
-                </td>
-                <td>
-                    <a onclick="" data-toggle="modal" data-target="#editModal1">修改</a>
-                </td>
-                <td>
-                    <a href="#">删除</a>
                 </td>
             </tr>
             </tbody>
@@ -227,115 +241,6 @@
         </div>
     </div>
     <!-- 数据表格 /-->
-</div>
-<!--编辑药品信息窗口-->
-<div class="modal fade" id="editModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" style="width:80%;">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button id="bt1" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h3 id="myModalLabe1">编辑药品信息</h3>
-            </div>
-            <div class="modal-body">
-                <table class="table table-bordered table-striped">
-                    <tr>
-                        <td>流水号:</td>
-                        <td></td>
-                        <td>通用名:</td>
-                        <td><input name="organizationalCode" class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>剂型:</td>
-                        <td>
-                            <select style="width:50%;height: 10%">
-                                <option value="0">请选择</option>
-                            </select>
-                        </td>
-                        <td>规格:</td>
-                        <td><input name="idCard" class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>单位:</td>
-                        <td width=""><input class="form-control"></td>
-                        <td>转换系数:</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>生产企业名称</td>
-                        <td><input class="form-control"></td>
-                        <td>商品名</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>中标价格</td>
-                        <td><input class="form-control"></td>
-                        <td>批准文号</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>是否进口药</td>
-                        <td style="word-break: keep-all;white-space: nowrap">
-                            <input type="radio" value="0" style="width: 15px;height: 15px" name="importedDrug"><span>是</span>
-                            <input type="radio" value="1" style="width: 15px;height: 15px" name="importedDrug"><span>否</span>
-                        </td>
-                        <td>批准文号有效期</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>包装材质</td>
-                        <td><input class="form-control"></td>
-                        <td>包装单位</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>最新零售价</td>
-                        <td><input class="form-control"></td>
-                        <td>零售价出处</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>质量层次</td>
-                        <td>
-                            <select style="width:50%;height: 10%">
-                                <option value="0">请选择</option>
-                            </select>
-                        </td>
-                        <td>质量层次说明</td>
-                        <td>
-                            <input class="form-control">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>有无药检报告</td>
-                        <td style="word-break: keep-all;white-space: nowrap">
-                            <input type="radio" value="1" style="width: 15px;height: 15px" name="importedDrug"><span>有</span>
-                            <input type="radio" value="0" style="width: 15px;height: 15px" name="importedDrug"><span>无</span>
-                        </td>
-                        <td>药检报告编号</td>
-                        <td><input class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>药品检验报告有效期:</td>
-                        <td><input class="form-control"></td>
-                        <td>药品交易状态:</td>
-                        <td><select style="width:50%;height: 10%">
-                            <option value="0">请选择</option>
-                        </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>产品说明：</td>
-                        <!--<td><input type="text" style="border: none;overflow: hidden;height: 200%;width: 225%"></td>-->
-                        <td colspan="3"><textarea style="height: 100%;width: 85%"></textarea></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-success" ng-click="save()" onclick="updataRegistrationOfCases()">保存</button>
-                <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
-            </div>
-        </div>
-    </div>
 </div>
 <!--查看药品信息窗口-->
 <div class="modal fade" id="editModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -442,30 +347,6 @@
             <div class="modal-footer">
                 <button class="btn btn-success" ng-click="save()" onclick="updataRegistrationOfCases()">保存</button>
                 <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- 导入窗口 -->
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button id="" type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel1">药品信息导入</h3>
-            </div>
-            <div style="text-align: center">
-                下载模板文件<a href="#">点击下载药品信息导入模板</a>
-            </div>
-            <div style="text-align: center;color: red">提示：请下载后在模板文件中录入药品信息,在下面的“选择文件”中选择要导入的文件,点击“导入”</div>
-            <div style="text-align: center;color: red">注意：请下载模板文件后切勿修改excel的单元格格式,导入文件单元格格式必须为文本。</div>
-            <div class="modal-body" style="text-align: center">
-                <input type="file" name="file" id="file">
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-success" onclick="uploadfile()">导入</button>
-                <button class="btn btn-warning" onclick="">查看导入失败结果</button>
-                <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
         </div>
     </div>
