--- a/src/main/resources/static/css/bootsnav.css
+++ b/src/main/resources/static/css/bootsnav.css
@@ -1276,7 +1276,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     /* Tabs
     =================================*/ 
     nav.navbar.bootsnav .megamenu-content.tabbed{
-        padding-left: 0 !mportant;
+        padding-left: 0mportant;
     }
     
     nav.navbar.bootsnav .tabbed > li{
