--- a/src/main/resources/templates/purchasingmanagement2/purchasin_management_settlement_management.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasin_management_settlement_management.html
@@ -1,11 +1,9 @@
-
-<!--案件登记-->
 <html>
 <head>
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="IE=edge">
-    <title>药品品目维护</title>
+    <title>结算管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="css/bootstrap.min.css">
