--- a/src/main/resources/templates/purchasingmanagement2/purchasing_management_index.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasing_management_index.html
@@ -3,7 +3,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>监督管理系统</title>
+    <title>退货管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <!-- 页面meta /-->
@@ -144,7 +144,7 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li>
-                                    <a href="purchasing_management_return_order" target="iframe">
+                                    <a href="purchasing_management_return_form" target="iframe">
                                         添加退货单
                                     </a>
                                 </li>
