--- a/src/main/resources/templates/systemmanagement/user_management.html
+++ b/src/main/resources/templates/systemmanagement/user_management.html
@@ -6,153 +6,33 @@
     <script src="layui/layui.js"></script>
     <link rel="stylesheet" href="layui/css/layui.css">
     <script>
-        layui.use(['laypage', 'layer'], function() {
-            var laypage = layui.laypage;
-            layer = layui.layer;
-            //自定义样式
-            laypage.render({
-                elem: 'demo2'
-                , count: 100
-                , theme: '#1E9FFF'
+        layui.use('table', function(){
+            var table = layui.table;
+
+            //第一个实例
+            table.render({
+                elem: '#demo'
+                ,height: 312
+                ,url: 'findUserAll' //数据接口
+                ,page: true //开启分页
+                ,cols: [[ //表头
+                    {field: 'id', title: 'ID', width:80, sort: true, fixed: 'left'}
+                    ,{field: 'userAccount', title: '用户名', width:80}
+                    ,{field: 'userName', title: '用户账号', width:80, sort: true}
+                    ,{field: 'roleId', title: '用户类别', width:80}
+                    ,{field: 'userState', title: '用户状态', width: 177}
+                    ,{field: 'unitId', title: '单位地址', width: 80, sort: true}
+                    ,{field: 'contactAddress', title: '联系地址', width: 80, sort: true}
+                    ,{field: 'postCode', title: '邮政编码', width: 80}
+                    ,{field: 'contacts', title: '联系人', width: 135, sort: true}
+                    ,{field: 'phone', title: '联系方式', width: 135, sort: true}
+                    ,{field: 'email', title: '邮箱', width: 135, sort: true}
+                ]]
             });
-        })
+        });
     </script>
-    <style>
-        body{
-            padding: 0;
-            margin: 0;
-        }
-        .li-style li{
-            float: left;
-            list-style: none;
-        }
-        .healthBureau_ops{
-            margin-right:1000px;
-            float: left;
-        }
-        #find{
-            float: right;
-            margin-right: 100px;
-        }
-    </style>
 </head>
 <body>
-<div class="healthBureau" style="padding: 15px;">
-    <div id="healthBureau_head">
-        <form class="layui-form" action="">
-            <ul class="li-style">
-                <li><div class="layui-form-item">
-                    <label class="layui-form-label">ID</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="title"  placeholder="请输入ID" class="layui-input" style="width: 200px">
-                    </div>
-                </div></li>
-                <li><div class="layui-form-item">
-                    <label class="layui-form-label">用户名称</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="title"  placeholder="请输入用户名称" class="layui-input" style="width: 200px">
-                    </div>
-                </div></li>
-                <li><div class="layui-form-item">
-                    <label class="layui-form-label">所在单位</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="title"  placeholder="请输入所在单位" class="layui-input" style="width: 200px">
-                    </div>
-                </div></li>
-            </ul>
-        </form>
-        <button class="layui-btn layui-btn-normal layui-btn-lg" id="find">查询</button>
-    </div>
-    <div class="healthBureau_ops layui-btn-group">
-        <button class="layui-btn layui-btn-normal layui-btn-lg">添加</button>
-        <button class="layui-btn layui-btn-normal layui-btn-lg">导出</button>
-        <button class="layui-btn layui-btn-normal layui-btn-lg">导入</button>
-    </div>
-    <div>
-        <table class="layui-table">
-            <colgroup>
-                <col width="150">
-                <col width="200">
-                <col>
-            </colgroup>
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>用户账号</th>
-                <th>用户名称</th>
-                <th>用户角色</th>
-                <th>所在单位</th>
-                <th>联系地址</th>
-                <th>邮政编码</th>
-                <th>联系方式</th>
-                <th>邮箱</th>
-                <th>查看</th>
-                <th>修改</th>
-                <th>删除</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>0000</td>
-                <td>wangwu</td>
-                <td>王五</td>
-                <td>卫生室内</td>
-                <td>海康医疗</td>
-                <td>西安市</td>
-                <td>100100</td>
-                <td>15632321547</td>
-                <td>2569322326@qq.com</td>
-                <td style="color: #1E9FFF" href="">查看</td>
-                <td style="color: #1E9FFF">修改</td>
-                <td style="color: #1E9FFF">删除</td>
-            </tr>
-            <tr>
-                <td>0000</td>
-                <td>wangwu</td>
-                <td>王五</td>
-                <td>卫生室内</td>
-                <td>海康医疗</td>
-                <td>西安市</td>
-                <td>100100</td>
-                <td>15632321547</td>
-                <td>2569322326@qq.com</td>
-                <td style="color: #1E9FFF" href="">查看</td>
-                <td style="color: #1E9FFF">修改</td>
-                <td style="color: #1E9FFF">删除</td>
-            </tr>
-            <tr>
-                <td>0000</td>
-                <td>wangwu</td>
-                <td>王五</td>
-                <td>卫生室内</td>
-                <td>海康医疗</td>
-                <td>西安市</td>
-                <td>100100</td>
-                <td>15632321547</td>
-                <td>2569322326@qq.com</td>
-                <td style="color: #1E9FFF" href="">查看</td>
-                <td style="color: #1E9FFF">修改</td>
-                <td style="color: #1E9FFF">删除</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <!--<div id="show-bottom" style="height:1.875rem;">
-        <span>第${pageInfo.pageNum}页/共${pageInfo.pages}页</span>
-        <a href="users?pageNum=0">首页</a>
-        <c:if test="${pageInfo.hasPreviousPage}">
-            <a href="users?pageNum=${pageInfo.pageNum-1}">上一页</a>
-        </c:if>
-        <c:if test="${pageInfo.hasNextPage}">
-            <a href="users?pageNum=${pageInfo.pageNum+1}">下一页</a>
-        </c:if>
-        <a href="users?pageNum=${pageInfo.pages}">尾页</a>
-    </div>-->
-    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-        <!--  <legend>自定义主题 - 颜色随意定义</legend>-->
-    </fieldset>
-
-    <div id="demo2"></div>
-</div>
+<table id="demo" lay-filter="test"></table>
 </body>
 </html>
